syntax = "proto3";
package emuspecs;

option go_package = "github.com/siderolabs/omni-infra-provider-kubevirt/api/specs";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

// MachineSpec is stored in Omni in the infra provisioner state.
message MachineSpec {
  string ipmi_ip = 1;
  uint32 ipmi_port = 2;
  string ipmi_password = 3;
}
